style.css
body {
    font-family: 'Courier New', Courier, monospace;
    background-color: #21252B;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

button {
    font-size: 32px;
    border: 2px solid #3B4048;
    background-color: #282C34;
    color: #EBEBEC;
    cursor: pointer;
    transition: 0.2s;
    box-sizing: border-box;
}

button:hover {
    color: #ffffff;
    background-color: #626772;
}

button:active {
    background-color: #282C34;
}

.calculator {
    background-color: #3B4048;
    border: 2px solid #3B4048;
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    user-select: none;
    aspect-ratio: 4 / 6;
    width: 400px; 
}

.screen {
    background-color: olive;
    font-size: 32px;
    padding: 0 20px;
    box-sizing: border-box;
    flex: 0 0 100%;
    height: calc(100% / 6);
    display: flex;
    align-items: center;
    justify-content: flex-end;
    border: 2px solid #3B4048;
    aspect-ratio: 4 / 1;
}

.buttons-left {
    display: flex;
    flex: 3;
    flex-wrap: wrap;
    height: calc(100% * 5 / 6);
}

.buttons-left button {
    flex: 0 0 calc(100% / 3);
    aspect-ratio: 1 / 1 ;
}

.buttons-left .buttons-wide {
    flex: 0 0 calc(100% / 1.5);
    aspect-ratio: 2 / 1;
}

.buttons-right {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.buttons-right button {
    flex: 0 0 20%;
    aspect-ratio: 1 / 1;
}

.buttons-right .buttons-tall {
    flex: 0 0 40%;
    aspect-ratio: 1 / 2;
}

